<resources>
    <string name="app_name">FR</string>
    <string name="send">Отправить</string>
    <string name="empty_results">Результаты отсутствуют</string>
    <string name="current_ip">Текущий IP-Адрес:</string>
    <string name="default_ip">192.168.1.1</string>
    <string name="edit">Изменить</string>
    <string name="save">Сохранить</string>
    <string name="change_password">Сменить пароль</string>
    <string name="old_pass">Старый пароль</string>
    <string name="new_pass">Новый пароль</string>
    <string name="confirm_pass">Подтвердите пароль</string>
    <string name="save_password_new">Сохранить пароль</string>
    <string name="show_password">Показать пароль</string>
    <string name="login">Логин</string>
    <string name="password">Пароль</string>
    <string name="login_error">Логин или пароль введены неверно</string>
    <string name="sign_in">Войти</string>
    <string name="textCarNumber">Введите номер автомобиля</string>
    <string name="car_number_hint">001XXX01</string>
    <string name="search">Поиск</string>
    <string name="pick_photo">Выбрать фото</string>
    <string name="car_find">Найти машину</string>
    <string name="results">Результаты</string>
    <string name="test_datetime">12-12-2020 00:00:00</string>
    <string name="fio">ФИО</string>
    <string name="iin">IIN</string>
    <string name="ud_number">Ud Number</string>
    <string name="distance">Distance</string>
    <string name="no_car">Нет автомобиля</string>
    <string name="show">Показать автомобиль</string>
    <string name="original_photo">Оригинальное изображение</string>
    <string name="crop_photo">Обрезанное лицо</string>
    <string name="surname">Фамилия</string>
    <string name="Test">Тест</string>
    <string name="first_name">Имя</string>
    <string name="second_name">Отчество</string>
    <string name="iiin">ИИН</string>
    <string name="ud_number_detail">Номер уд. личности</string>
    <string name="grnz">ГРНЗ</string>
    <string name="car_model">Модель авто</string>
    <string name="car_year">Год выпуска</string>
    <string name="vin">VIN-код</string>
    <string name="driver_license">Серия вод. удостоверения</string>
    <string name="date_license">Срок действия вод. удостоверения</string>
    <string name="technical_passport">Серия тех. паспорта</string>
    <string name="date_tech_pass">Дата выдачи тех. паспорта</string>
    <string name="clear">Очистить</string>
    <string name="save_login">Сохранить логин</string>
    <string name="make_photo">Сделать фото</string>
    <string name="choose_car">Нажмите для выбора</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="test_number">5</string>
    <string name="iur_text">Юр. лицо</string>
    <string name="gallery">Выбрать с галереи</string>
    <string name="test_name">Свежинов Виталий Викторович</string>
    <string name="main_name">FR</string>
    <string name="info_app">Система распознавания лиц и гос. номеров авто</string>
    <string name="text_photo">Распознать по фотографии с камеры</string>
    <string name="text_gallery">Загрузить фотографию с галереи</string>
    <string name="text_car">Распознать гос. номер автомобиля</string>
    <string name="text_results">Просмотреть историю поиска лиц</string>
    <string name="exit">Выйти</string>
    <string name="test_name_detail">Артемова Марина Николаевна</string>
    <string name="text_test_iin">ИИН: 92487923742</string>
    <string name="test_distance">80%</string>
    <string name="is_have_car_true">Зарегистрирован автомобиль</string>
    <string name="back_button">Назад</string>
    <string name="save_pass">Сохранить пароль</string>
</resources>