<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background"
    android:orientation="vertical">

    <LinearLayout
        android:id="@+id/ipLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:visibility="gone">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="25dp"
            android:gravity="center"
            android:text="@string/current_ip"
            android:textColor="@color/white"
            android:textSize="22sp" />

        <EditText
            android:id="@+id/IPAddressText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="25dp"
            android:clickable="false"
            android:ems="10"
            android:inputType="textPersonName"
            android:text="@string/default_ip"
            android:textAlignment="center"
            android:textColor="@color/white"
            android:textSize="22sp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:layout_marginBottom="15dp"
            android:orientation="horizontal">

            <Button
                android:id="@+id/buttonEdit"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:layout_marginEnd="20dp"
                android:layout_weight="1"
                android:text="@string/edit" />

            <Button
                android:id="@+id/buttonSave"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:layout_marginEnd="20dp"
                android:layout_weight="1"
                android:enabled="false"
                android:text="@string/save" />
        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/layout_password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:visibility="gone"
        >

        <EditText
            android:layout_marginTop="5dp"
            android:id="@+id/textOldPass"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/old_pass"
            android:inputType="textPassword"
            android:textColor="@color/white"
            android:minHeight="48dp"
            android:textColorHint="@color/white" />

        <EditText
            android:layout_marginTop="5dp"
            android:id="@+id/textNewPass"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="textPassword"
            android:textColor="@color/white"
            android:minHeight="48dp"
            android:hint="@string/new_pass"
            android:textColorHint="@color/white"/>

        <EditText
            android:layout_marginTop="5dp"
            android:id="@+id/textConfirmPass"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:minHeight="48dp"
            android:inputType="textPassword"
            android:textColor="@color/white"
            android:hint="@string/confirm_pass"
            android:textColorHint="@color/white" />
        <CheckBox
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/checkbox"
            android:text="@string/show_password"
            android:textColor="@color/white"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="20dp"
            android:layout_marginTop="8dp"
            />

        <Button
            android:id="@+id/buttonSavePass"
            android:layout_marginTop="10dp"
            android:layout_marginStart="100dp"
            android:layout_marginEnd="100dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/save_password_new" />

        <TextView
            android:layout_marginTop="15dp"
            android:id="@+id/errorText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text=""
            android:textColor="#FF0000"
            android:textSize="20sp"
            android:gravity="center"/>

    </LinearLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <Button
            android:id="@+id/buttonChange"
            android:layout_alignParentTop="true"
            android:layout_marginStart="60dp"
            android:layout_marginEnd="60dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="25dp"
            android:text="@string/change_password" />
    </RelativeLayout>


</LinearLayout>