<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background2"
    android:orientation="vertical">


    <ProgressBar
        android:layout_marginTop="50dp"
        android:visibility="visible"
        android:id="@+id/progressBar"
        style="?android:attr/progressBarStyle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <ImageView
        android:visibility="gone"
        android:layout_marginStart="100dp"
        android:layout_marginEnd="100dp"
        android:layout_marginTop="30dp"
        android:layout_width="wrap_content"
        android:layout_height="200dp"
        android:id="@+id/imagePerson"
        android:src="@drawable/person_icon" />

    <TableLayout
        android:id="@+id/tableCitizen"
        android:visibility="gone"
        android:layout_marginStart="10dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp">
        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:weightSum="10">
            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="5"
                android:textColor="@color/white"
                android:textSize="17sp"
                android:text="@string/surname" />
            <TextView
                android:id="@+id/textSurname"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="5"
                android:textColor="@color/white"
                android:textSize="17sp"/>
        </TableRow>
        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:weightSum="10">
            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="5"
                android:textColor="@color/white"
                android:textSize="17sp"
                android:text="@string/first_name" />
            <TextView
                android:id="@+id/textFirstName"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="5"
                android:textColor="@color/white"
                android:textSize="17sp" />
        </TableRow>
        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:weightSum="10">
            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="5"
                android:textColor="@color/white"
                android:textSize="17sp"
                android:text="@string/second_name" />
            <TextView
                android:id="@+id/textSecondName"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="5"
                android:textColor="@color/white"
                android:textSize="17sp"/>
        </TableRow>
        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:weightSum="10">
            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="5"
                android:textColor="@color/white"
                android:textSize="17sp"
                android:text="@string/iiin" />
            <TextView
                android:id="@+id/textIn"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="5"
                android:textColor="@color/white"
                android:textSize="17sp" />
        </TableRow>
        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:weightSum="10">
            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="5"
                android:textColor="@color/white"
                android:textSize="17sp"
                android:text="@string/ud_number_detail" />
            <TextView
                android:id="@+id/textUd"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="5"
                android:textColor="@color/white"
                android:textSize="17sp"/>
        </TableRow>
        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:weightSum="10">
            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="5"
                android:textColor="@color/white"
                android:textSize="17sp"
                android:text="@string/driver_license" />
            <TextView
                android:id="@+id/textLicense"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="5"
                android:textColor="@color/white"
                android:textSize="17sp"/>
        </TableRow>
        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:weightSum="10">
            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="5"
                android:textColor="@color/white"
                android:textSize="17sp"
                android:text="@string/date_license" />
            <TextView
                android:id="@+id/textDateLicense"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="5"
                android:textColor="@color/white"
                android:textSize="17sp"/>
        </TableRow>
    </TableLayout>
    <TableLayout
        android:id="@+id/tableIur"
        android:layout_marginStart="10dp"
        android:visibility="gone"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp">
        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:weightSum="10">
            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="5"
                android:textColor="@color/white"
                android:textSize="17sp"
                android:text="@string/iur_text" />

            <TextView
                android:id="@+id/textIur"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="5"
                android:textColor="@color/white"
                android:textSize="17sp"/>
        </TableRow>
    </TableLayout>
    <TableLayout
        android:id="@+id/tableCar"
        android:layout_marginStart="10dp"
        android:visibility="gone"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp">
        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:weightSum="10">
            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="5"
                android:textColor="@color/white"
                android:textSize="17sp"
                android:text="@string/grnz" />

            <TextView
                android:id="@+id/textGrnz"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="5"
                android:textColor="@color/white"
                android:textSize="17sp"/>
        </TableRow>
        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:weightSum="10">
            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="5"
                android:textColor="@color/white"
                android:textSize="17sp"
                android:text="@string/car_model" />

            <TextView
                android:id="@+id/textCarModel"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="5"
                android:textColor="@color/white"
                android:textSize="17sp"/>
        </TableRow>
        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:weightSum="10">
            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="5"
                android:textColor="@color/white"
                android:textSize="17sp"
                android:text="@string/car_year" />

            <TextView
                android:id="@+id/textCarYear"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="5"
                android:textColor="@color/white"
                android:textSize="17sp"/>
        </TableRow>
        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:weightSum="10">
            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="5"
                android:textColor="@color/white"
                android:textSize="17sp"
                android:text="@string/vin" />

            <TextView
                android:id="@+id/textVin"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="5"
                android:textColor="@color/white"
                android:textSize="17sp"/>
        </TableRow>
        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:weightSum="10">
            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="5"
                android:textColor="@color/white"
                android:textSize="17sp"
                android:text="@string/technical_passport" />
            <TextView
                android:id="@+id/textTechPass"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="5"
                android:textColor="@color/white"
                android:textSize="17sp"/>
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:weightSum="10">
            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="5"
                android:textColor="@color/white"
                android:textSize="17sp"
                android:text="@string/date_tech_pass" />
            <TextView
                android:id="@+id/textDateTechPass"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="5"
                android:textColor="@color/white"
                android:textSize="17sp"/>
        </TableRow>
    </TableLayout>

</LinearLayout>